<resources>
    <string name="app_name">DogShare</string>
    <string name="title_walking">Walking</string>
    <string name="title_feeding">Feeding</string>
    <string name="title_home">Home</string>
    <string name="title_meetups">Meetups</string>
    <string name="title_dogwalker">DogWalker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>