<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_walking"
        android:icon="@drawable/nav_walking_selector"
        android:title="@string/title_walking" />

    <item
        android:id="@+id/nav_feeding"
        android:icon="@drawable/nav_feeding_selector"
        android:title="@string/title_feeding" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_meetups"
        android:icon="@drawable/nav_meetups_selector"
        android:title="@string/title_meetups" />

    <item
        android:id="@+id/nav_dogwalker"
        android:icon="@drawable/nav_dogwalker_selector"
        android:title="@string/title_dogwalker" />

</menu>